# handwriting-lab

./: .gitignore  .gitlab-ci.yml  README.md  inference.Containerfile  pyproject.toml  railway.toml  requirements-streamlit.txt  setup-streamlit.sh  streamlit.Containerfile  streamlit_app.py  train_model.Containerfile
conf/: batch_infer.yaml  process_data.yaml  train_model.yaml
conf/.deep/.down/: gold.chest
docs/: training_pipeline.md
reports/: evaluation_latest.json
scripts/: bootstrap_processed_mnist.py  evaluate_model.py  retrain_local_model.sh
src/: batch_infer.py  process_data.py  run_train.sh  train_model.py
src/mnist/: __init__.py  general_utils.py
src/mnist/data_prep/: __init__.py  datasets.py  transforms.py
src/mnist/modeling/: __init__.py  utils.py
src/mnist_fastapi/: __init__.py  config.py  deps.py  main.py  rate_limit.py
src/mnist_fastapi/v1/: __init__.py
src/mnist_fastapi/v1/routers/: __init__.py  model.py
src/mnist_fastapi/web/: index.html
src/mnist_streamlit/: app.py  config.toml  secrets.toml  secrets.toml.example
src/tests/: dummy_test.py  test_data_prep.py  test_dummy.py
